[project]
name = "mvcluster"
version = "0.1.0"
description = "A Python package for multiview unsupervised clustering"
authors = [{name = "Ton Nom", email = "ton.email@exemple.com"}]
readme = "README.md"
license = {text = "MIT"}
dependencies = ["numpy", "scikit-learn", "torch", "scipy"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
